add getIngredients test